--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -66,23 +66,18 @@ jobs:
           IDE_SIGNING_KEY_PASS: ${{ secrets.IDE_SIGNING_KEY_PASS }}
           IDE_SIGNING_STORE_PASS: ${{ secrets.IDE_SIGNING_STORE_PASS }}
           IDE_SIGNING_URL: ${{ secrets.IDE_SIGNING_URL }}
-      - name: Archive APKs
-        run: tar cvJf --ignore-failed-read apks.tar.xz ls app/build/outputs/apk/debug/app-debug.apk app/build/outputs/apk/release/app-release.apk
       - name: Upload Debug APK
+        if: ${{ github.ref != 'refs/heads/main' }}
         uses: actions/upload-artifact@v3
         with:
           name: apk-debug
           path: app/build/outputs/apk/debug/**.apk
       - name: Upload Release APK
+        if: ${{ github.ref == 'refs/heads/main' }}
         uses: actions/upload-artifact@v3
         with:
           name: apk-release
           path: app/build/outputs/apk/release/**.apk
-      - name: Upload APK archive
-        uses: actions/upload-artifact@v3
-        with:
-          name: apks
-          path: apks.tar.xz
 
   unit_test_debug:
     name: Run local tests
@@ -183,9 +178,7 @@ jobs:
       - name: Download APKs
         uses: actions/download-artifact@v3
         with:
-          name: apks
-      - name: Unpack APKs
-        run: tar xvJf apks.tar.xz
+          name: apks-release
       - name: Change Gradle wrapper permissions
         run: chmod +x ./gradlew
       - name: Restore cache
