--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -55,6 +55,9 @@ jobs:
           IDE_SIGNING_KEY_PASS: ${{ secrets.IDE_SIGNING_KEY_PASS }}
           IDE_SIGNING_STORE_PASS: ${{ secrets.IDE_SIGNING_STORE_PASS }}
           IDE_SIGNING_URL: ${{ secrets.IDE_SIGNING_URL }}
+      - name: Copy debug APK
+        if: ${{ github.ref != 'refs/heads/main' }}
+        run: cp app/build/outputs/apk/debug/**.apk ./
       - name: Assemble Release
         if: ${{ github.ref == 'refs/heads/main' }}
         run: ./gradlew assembleRelease
@@ -66,18 +69,21 @@ jobs:
           IDE_SIGNING_KEY_PASS: ${{ secrets.IDE_SIGNING_KEY_PASS }}
           IDE_SIGNING_STORE_PASS: ${{ secrets.IDE_SIGNING_STORE_PASS }}
           IDE_SIGNING_URL: ${{ secrets.IDE_SIGNING_URL }}
+      - name: Copy release APK
+        if: ${{ github.ref == 'refs/heads/main' }}
+        run: cp app/build/outputs/apk/release/**.apk ./
       - name: Upload Debug APK
         if: ${{ github.ref != 'refs/heads/main' }}
         uses: actions/upload-artifact@v3
         with:
           name: apk-debug
-          path: app/build/outputs/apk/debug/**.apk
+          path: app-debug.apk
       - name: Upload Release APK
         if: ${{ github.ref == 'refs/heads/main' }}
         uses: actions/upload-artifact@v3
         with:
           name: apk-release
-          path: app/build/outputs/apk/release/**.apk
+          path: app-release.apk
 
   unit_test_debug:
     name: Run local tests
