fix: address some memory leaks

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -61,7 +61,7 @@
       android:windowSoftInputMode="adjustResize" />
 
     <service
-      android:name=".services.GradleBuildService"
+      android:name=".services.builder.GradleBuildService"
       android:exported="false" />
 
     <provider
