--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -35,6 +35,7 @@ common-eventbus_ap = { module = "org.greenrobot:eventbus-annotation-processor", 
 common-javapoet = { module = "com.squareup:javapoet", version = "1.13.0" }
 common-ksp = { module = "com.google.devtools.ksp:symbol-processing-api", version.ref = "ksp" }
 common-jsonrpc = { module = "org.eclipse.lsp4j:org.eclipse.lsp4j.jsonrpc", version = "0.19.0" }
+common-leakcanary = { module = "com.squareup.leakcanary:leakcanary-android", version = "2.10"}
 
 # AndroidX
 androidx-annotation = { module = "androidx.annotation:annotation", version = "1.5.0" }
