--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -4,7 +4,7 @@ agp-tooling = "7.4.2"
 gradle-tooling = "7.6.1"
 kotlin = "1.8.10"
 tree-sitter = "1.4.3"
-editor = "0.21.1"
+editor = "0.21.1-a389dd2-SNAPSHOT"
 glide = "4.15.1"
 androidx-vectordrawable = "1.1.0"
 androidx-navigation = "2.5.3"
