--- a/tests/test-project/build.gradle
+++ b/tests/test-project/build.gradle
@@ -1,4 +1,5 @@
-/* DO NOT EDIT - Automatically generated file */
+// DO NOT EDIT - Automatically generated file
+
 buildscript {
     ext {
         build_gradle_version = "7.2.0"
