tests(test-project): declare namespaces in build scripts

--- a/tests/test-project/another-android-library/build.gradle
+++ b/tests/test-project/another-android-library/build.gradle
@@ -3,6 +3,7 @@ plugins {
 }
 
 android {
+    namespace = "com.itsaky.test.another.android.library"
     compileSdkVersion rootProject.ext.compileSdk
     buildToolsVersion rootProject.ext.buildTools
     
