--- a/tests/test-project/android-library/build.gradle
+++ b/tests/test-project/android-library/build.gradle
@@ -3,6 +3,7 @@ plugins {
 }
 
 android {
+    namespace = "com.itsaky.android.library"
     compileSdkVersion rootProject.ext.compileSdk
     buildToolsVersion rootProject.ext.buildTools
     
