build: migrate to AGP 8.0.0-rc01

--- a/gradle.properties
+++ b/gradle.properties
@@ -15,3 +15,6 @@ org.gradle.jvmargs=-Xmx2048M --add-opens java.base/java.lang=ALL-UNNAMED --add-o
 android.useAndroidX=true
 android.enableJetifier=false
 android.jetifier.ignorelist=common-30.2.2.jar
+
+# TODO : Migrate
+android.nonTransitiveRClass=false
