--- a/gradle-plugin/src/main/java/AndroidIDEBuildInfo.kt.in
+++ b/gradle-plugin/src/main/java/AndroidIDEBuildInfo.kt.in
@@ -14,23 +14,12 @@
  *  You should have received a copy of the GNU General Public License
  *   along with AndroidIDE.  If not, see <https://www.gnu.org/licenses/>.
  */
-package com.itsaky.androidide.gradle
-
-import org.gradle.api.Plugin
-import org.gradle.api.Project
 
 /**
- * Gradle Plugin for projects built in AndroidIDE.
+ * Build information.
  *
  * @author Akash Yadav
  */
-class AndroidIDEGradlePlugin : Plugin<Project> {
-
-  override fun apply(target: Project) {
-    target.run {
-      if (plugins.hasPlugin("com.android.application")) {
-        plugins.apply(LogSenderPlugin::class.java)
-      }
-    }
-  }
+object AndroidIDEBuildInfo {
+  const val BUILD_VERSION = "@@BUILD_VERSION@@"
 }
