chore(workflow): fix: publishing credentials not provided to publishing task

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -234,3 +234,10 @@ jobs:
             ${{ runner.os }}-gradle-
       - name: Publish release
         run: ./gradlew publishAllPublicationsToMavenCentralRepository --stacktrace
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          ORG_GRADLE_PROJECT_mavenCentralUsername: ${{ secrets.MVN_USERNAME }}
+          ORG_GRADLE_PROJECT_mavenCentralPassword: ${{ secrets.MVN_PASSWORD }}
+          ORG_GRADLE_PROJECT_signingInMemoryKey: ${{ secrets.MVN_SIGNING_KEY }}
+          ORG_GRADLE_PROJECT_signingInMemoryKeyId: ${{ secrets.MVN_SIGNING_KEY_ID }}
+          ORG_GRADLE_PROJECT_signingInMemoryKeyPassword: ${{ secrets.MVN_SIGNING_KEY_PASSWORD }}
