fix(build-info): use primitive boolean type in BuildInfo

--- a/build-info/src/main/java/com/itsaky/androidide/buildinfo/BuildInfo.java.in
+++ b/build-info/src/main/java/com/itsaky/androidide/buildinfo/BuildInfo.java.in
@@ -29,7 +29,7 @@ public class BuildInfo {
 
   // --------- CI info --------------------
 
-  public static final Boolean CI_BUILD = @@CI_BUILD@@;
+  public static final boolean CI_BUILD = @@CI_BUILD@@;
   public static final String CI_GIT_BRANCH = "@@CI_GIT_BRANCH@@";
   public static final String CI_GIT_COMMIT_HASH = "@@CI_COMMIT_HASH@@";
 
