--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -210,7 +210,7 @@ jobs:
     name: Publish artifacts
     runs-on: ubuntu-latest
     needs: [ build_apk, unit_test_debug, test_tooling_api ]
-    if: ${{ always() && github.event_name != 'pull_request' && needs.build_apk.result == 'success' && needs.unit_test_debug.result == 'success' && needs.test_tooling_api.result == 'success' }}
+    if: ${{ always() && needs.build_apk.result == 'success' && needs.unit_test_debug.result == 'success' && needs.test_tooling_api.result == 'success' }}
     steps:
       - name: Checkout
         uses: actions/checkout@v3
