feat: use sockets for logsender to allow large log transactions
Use of AIDL IPC limits the transactions to 1MB in size. This commit implements the communication with AIDL and Sockets to overcome this limit

--- a/logsender/src/main/AndroidManifest.xml
+++ b/logsender/src/main/AndroidManifest.xml
@@ -19,6 +19,7 @@
   <queries>
     <package android:name="com.itsaky.androidide"/>
   </queries>
+  <uses-permission android:name="android.permission.INTERNET"/>
   <uses-permission android:name="com.itsaky.androidide.permission.BIND_LOG_SERVICE"/>
   <application>
     <provider
