--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -3,7 +3,7 @@ agp = "8.0.0-rc01"
 agp-tooling = "7.4.2"
 gradle-tooling = "8.0.2"
 kotlin = "1.8.20"
-tree-sitter = "1.4.3"
+tree-sitter = "2.0.0"
 editor = "0.21.1-a389dd2-SNAPSHOT"
 glide = "4.15.1"
 androidx-vectordrawable = "1.1.0"
@@ -15,11 +15,11 @@ antlr4 = "4.12.0"
 
 # AndroidIDE
 androidide-javac = { module = "io.github.itsaky:nb-javac-android", version = "17.0.0.4-SNAPSHOT" }
-androidide-ts = { module = "io.github.itsaky:android-tree-sitter", version.ref = "tree-sitter" }
-androidide-ts-java = { module = "io.github.itsaky:tree-sitter-java", version.ref = "tree-sitter" }
-androidide-ts-json = { module = "io.github.itsaky:tree-sitter-json", version.ref = "tree-sitter" }
-androidide-ts-kotlin = { module = "io.github.itsaky:tree-sitter-kotlin", version.ref = "tree-sitter" }
-androidide-ts-xml = { module = "io.github.itsaky:tree-sitter-xml", version.ref = "tree-sitter" }
+androidide-ts = { module = "com.itsaky.androidide:android-tree-sitter", version.ref = "tree-sitter" }
+androidide-ts-java = { module = "com.itsaky.androidide:tree-sitter-java", version.ref = "tree-sitter" }
+androidide-ts-json = { module = "com.itsaky.androidide:tree-sitter-json", version.ref = "tree-sitter" }
+androidide-ts-kotlin = { module = "com.itsaky.androidide:tree-sitter-kotlin", version.ref = "tree-sitter" }
+androidide-ts-xml = { module = "com.itsaky.androidide:tree-sitter-xml", version.ref = "tree-sitter" }
 
 # Common
 common-editor = { module = "io.github.Rosemoe.sora-editor:editor", version.ref = "editor" }
