--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -168,7 +168,7 @@ jobs:
     name: Publish release
     runs-on: ubuntu-latest
     needs: [build_apk, unit_test_debug, test_tooling_api]
-    if: ${{ always() && github.event_name != 'pull_request' && github.ref == 'refs/heads/main' && needs.build_apk.result == 'success' }}
+    if: ${{ always() && github.event_name != 'pull_request' && github.ref == 'refs/heads/main' && needs.build_apk.result == 'success' && needs.unit_test_debug.result == 'success' && needs.test_tooling_api.result == 'success' }}
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -206,11 +206,11 @@ jobs:
           name: .nyx-state-${{ github.job }}.json
           path: build/nyx-state.json
 
-  publish_artifacts:
-    name: Publish artifacts
+  publish_snapshots:
+    name: Publish package snapshots
     runs-on: ubuntu-latest
-    needs: [ build_apk, unit_test_debug, test_tooling_api ]
-    if: ${{ always() && needs.build_apk.result == 'success' && needs.unit_test_debug.result == 'success' && needs.test_tooling_api.result == 'success' }}
+    needs: [ build_apk ]
+    if: ${{ always() && github.event_name != 'pull_request' && github.ref == 'refs/heads/main' && needs.build_apk.result == 'success' }}
     steps:
       - name: Checkout
         uses: actions/checkout@v3
