--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -210,7 +210,7 @@ jobs:
     name: Publish package snapshots
     runs-on: ubuntu-latest
     needs: [ build_apk ]
-    if: ${{ always() && github.event_name != 'pull_request' && github.ref == 'refs/heads/main' && needs.build_apk.result == 'success' }}
+    if: ${{ always() && needs.build_apk.result == 'success' }}
     steps:
       - name: Checkout
         uses: actions/checkout@v3
