--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,7 +13,7 @@ on:
       - '**.md'
       - 'fastlane/**'
       - '.github/workflows/crowdin_contributors.yml'
-  workflow_dispatch: {}
+  workflow_dispatch: { }
 
 jobs:
   build_apk:
@@ -213,8 +213,8 @@ jobs:
   publish:
     name: Publish release
     runs-on: ubuntu-latest
-    needs: [build_apk, unit_test_debug, test_tooling_api]
-    if: ${{ always() && github.event_name != 'pull_request' && github.ref == 'refs/heads/main' && needs.build_apk.result == 'success' && needs.unit_test_debug.result == 'success' && needs.test_tooling_api.result == 'success' }}
+    needs: [ build_apk, build_templates, unit_test_debug, test_tooling_api ]
+    if: ${{ always() && github.event_name != 'pull_request' && github.ref == 'refs/heads/main' && needs.build_apk.result == 'success' && needs.build_templates.result == 'success' && needs.unit_test_debug.result == 'success' && needs.test_tooling_api.result == 'success' }}
     steps:
       - name: Checkout
         uses: actions/checkout@v3
