--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -57,9 +57,10 @@ androidx-ktx = { module = "androidx.core:core-ktx", version = "1.10.0" }
 androidx-fragment_ktx = { module = "androidx.fragment:fragment-ktx", version = "1.5.7" }
 androidx-lib_desugaring = { module = "com.android.tools:desugar_jdk_libs", version = "1.1.6" }
 androidx-splashscreen = { module = "androidx.core:core-splashscreen", version = "1.0.1" }
-androidx-nav_frag = { module = "androidx.navigation:navigation-fragment-ktx", version.ref = "androidx-navigation" }
-androidx-nav_ui = { module = "androidx.navigation:navigation-ui-ktx", version.ref = "androidx-navigation" }
-androidx-nav_dynamic_features = { module = "androidx.navigation:navigation-dynamic-features-fragment", version.ref = "androidx-navigation" }
+androidx-transition = { module = "androidx.transition:transition-ktx", version = "1.4.1" }
+androidx-nav-fragment = { module = "androidx.navigation:navigation-fragment-ktx", version.ref = "androidx-navigation" }
+androidx-nav-ui = { module = "androidx.navigation:navigation-ui-ktx", version.ref = "androidx-navigation" }
+androidx-nav-dynamic_features = { module = "androidx.navigation:navigation-dynamic-features-fragment", version.ref = "androidx-navigation" }
 
 # Google
 google-material = { module = "com.google.android.material:material", version = "1.8.0" }
@@ -73,6 +74,7 @@ google-auto-service = { module = "com.google.auto.service:auto-service", version
 google-oss-licenses = { module = "com.google.android.gms:play-services-oss-licenses", version = "17.0.0" }
 google-protobuf = { module = "com.google.protobuf:protobuf-java", version = "3.22.3" }
 google-java-format = { module ="com.google.googlejavaformat:google-java-format", version="1.16.0" }
+google-flexbox = { module = "com.google.android.flexbox:flexbox", version = "3.0.0" }
 
 # AAPT2
 aapt2-common = { module = "com.android.tools:common", version = "30.2.2" }
