--- a/logsender/src/main/AndroidManifest.xml
+++ b/logsender/src/main/AndroidManifest.xml
@@ -16,16 +16,22 @@
   -->
 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
+
   <queries>
-    <package android:name="com.itsaky.androidide"/>
+    <package android:name="com.itsaky.androidide" />
   </queries>
-  <uses-permission android:name="android.permission.INTERNET"/>
-  <uses-permission android:name="com.itsaky.androidide.permission.BIND_LOG_SERVICE"/>
+
+  <uses-permission android:name="android.permission.INTERNET" />
+  <uses-permission android:name="com.itsaky.androidide.permission.BIND_LOG_SERVICE" />
+
   <application>
     <provider
       android:name=".utils.LogSenderInstaller"
       android:authorities="${applicationId}.logsender-installer"
       android:enabled="@bool/logsender_enabled"
+      android:exported="false" />
+    <service
+      android:name=".LogSenderService"
       android:exported="false" />
   </application>
 </manifest>
