--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -214,7 +214,7 @@ jobs:
     name: Publish package snapshots
     runs-on: ubuntu-latest
     needs: [ build_apk ]
-    if: ${{ always() && needs.build_apk.result == 'success' }}
+    if: ${{ always() && github.event_name != 'pull_request' && needs.build_apk.result == 'success' }}
     steps:
       - name: Checkout
         uses: actions/checkout@v3
