--- a/.nyx.yml
+++ b/.nyx.yml
@@ -14,10 +14,15 @@ changelog:
     "(?m)#([0-9]+)(?s)": "[#%s](https://github.com/AndroidIDEOfficial/AndroidIDE/issues/%s)"
 
 releaseAssets:
-  apk:
-    fileName: "androidide-{{version}}.apk"
-    description: "AndroidIDE {{version}} release APK"
-    path: app-release.apk
+  apk_arm64:
+    fileName: "androidide-{{version}}-arm64-v8a.apk"
+    description: "AndroidIDE {{version}} arm64-v8a release APK"
+    path: app-arm64-v8a-release.apk
+    type: application/octet-stream
+  apk_arm:
+    fileName: "androidide-{{version}}-armeabi-v7a.apk"
+    description: "AndroidIDE {{version}} armeabi-v7a release APK"
+    path: app-armeabi-v7a-release.apk
     type: application/octet-stream
 
 releaseTypes:
