--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -10,6 +10,8 @@ androidx-vectordrawable = "1.1.0"
 androidx-navigation = "2.5.3"
 ksp = "1.8.21-1.0.11"
 antlr4 = "4.13.0"
+androidx-work = "2.8.1"
+retrofit = "2.9.0"
 
 [libraries]
 
@@ -41,6 +43,8 @@ common-javapoet = { module = "com.squareup:javapoet", version = "1.13.0" }
 common-ksp = { module = "com.google.devtools.ksp:symbol-processing-api", version.ref = "ksp" }
 common-jsonrpc = { module = "org.eclipse.lsp4j:org.eclipse.lsp4j.jsonrpc", version = "0.20.1" }
 common-leakcanary = { module = "com.squareup.leakcanary:leakcanary-android", version = "2.11"}
+common-retrofit = { module = "com.squareup.retrofit2:retrofit", version.ref = "retrofit" }
+common-retrofit-gson = { module = "com.squareup.retrofit2:converter-gson", version.ref = "retrofit" }
 
 # AndroidX
 androidx-annotation = { module = "androidx.annotation:annotation", version = "1.6.0" }
@@ -62,6 +66,8 @@ androidx-transition = { module = "androidx.transition:transition-ktx", version =
 androidx-nav-fragment = { module = "androidx.navigation:navigation-fragment-ktx", version.ref = "androidx-navigation" }
 androidx-nav-ui = { module = "androidx.navigation:navigation-ui-ktx", version.ref = "androidx-navigation" }
 androidx-nav-dynamic_features = { module = "androidx.navigation:navigation-dynamic-features-fragment", version.ref = "androidx-navigation" }
+androidx-work = { module = "androidx.work:work-runtime", version.ref = "androidx-work" }
+androidx-work-ktx = { module = "androidx.work:work-runtime-ktx", version.ref = "androidx-work" }
 
 # Google
 google-material = { module = "com.google.android.material:material", version = "1.9.0" }
@@ -98,7 +104,10 @@ tests-junit = { module = "junit:junit", version = "4.13.2" }
 tests-google-truth = { module = "com.google.truth:truth", version = "1.1.3" }
 tests-robolectric = { module = "org.robolectric:robolectric", version = "4.10.3" }
 tests-androidx-test-core = { module = "androidx.test:core", version = "1.5.0" }
+tests-androidx-test-runner = { module = "androidx.test:runner", version = "1.5.2" }
+tests-androidx-test-rules = { module = "androidx.test:rules", version = "1.5.0" }
 tests-androidx-junit = { module = "androidx.test.ext:junit", version = "1.1.5" }
+tests-androidx-work-testing = { module = "androidx.work:work-testing", version.ref = "androidx-work" }
 tests-androidx-espresso = { module = "androidx.test.espresso:espresso-core", version = "3.5.1" }
 tests-mockito-kotlin = { module = "org.mockito.kotlin:mockito-kotlin", version = "5.0.0" }
 tests-mockk = { module = "io.mockk:mockk", version = "1.13.5" }
