--- a/idestats/src/main/AndroidManifest.xml
+++ b/idestats/src/main/AndroidManifest.xml
@@ -17,5 +17,5 @@
   -->
 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
-
+  <uses-permission android:name="android.permission.INTERNET"/>
 </manifest>
