chore(workflow): enable CI workflow for apk-v3-signing branch

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,7 +2,7 @@ name: Build and test
 
 on:
   push:
-    branches: [ "dev", "main" ]
+    branches: [ "dev", "main", "apk-v3-signing" ]
     paths-ignore:
       - '**.md'
       - 'fastlane/**'
