fix(deps): Combine Kotlin and KSP dependencies into a group, so that … (#1304)
* fix(deps): Combine Kotlin and KSP dependencies into a group, so that there is no error when trying to update them separately

--- a/renovate.json
+++ b/renovate.json
@@ -1,6 +1,15 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
-  "extends": [
-    "config:base"
+  "extends": ["config:base"],
+  "packageRules": [
+    {
+      "groupName": "Kotlin & KSP",
+      "matchPackagePrefixes": [
+        "com.google.devtools.ksp"
+      ],
+      "matchPackagePatterns": [
+        "org.jetbrains.kotlin.*"
+      ]
+    }
   ]
 }
