chore(renovate): add package rules for AndroidX Navigation dependencies

--- a/renovate.json
+++ b/renovate.json
@@ -10,6 +10,12 @@
       "matchPackagePatterns": [
         "org.jetbrains.kotlin.*"
       ]
+    },
+    {
+      "groupName": "AndroidX Navigation",
+      "matchPackagePatterns": [
+        "androidx.navigation.*"
+      ]
     }
   ]
 }
