--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -5,7 +5,7 @@ gradle-tooling = "8.3"
 junit-jupiter = "5.10.0"
 kotlin = "1.9.10"
 tree-sitter = "3.3.0"
-editor = "0.22.1"
+editor = "0.22.1-bcf3e90-SNAPSHOT"
 glide = "4.16.0"
 androidx-vectordrawable = "1.1.0"
 androidx-navigation = "2.5.3"
